# onedrive-client

./: .env.example  Makefile  README.md  pyproject.toml
scripts/: setup.sh
src/: onedrive.py  settings.py
