[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "onedrive-integration"
version = "0.1.0"
description = "OneDrive/SharePoint integration via Microsoft Graph API"
requires-python = ">=3.11,<4"
dependencies = [
    "azure-identity>=1.15.0",
    "msgraph-sdk>=1.54.0,<2.0.0",
    "ruff (>=0.15.0,<0.16.0)",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.poetry.group.dev.dependencies]
ipython = "^9.10.0"

